chore: revert openapi changes, keeping this clean
